--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -25,6 +25,7 @@
 @import "./cmps/contact-preview";
 @import "./cmps/app-header";
 @import "./cmps/contact-header";
+@import "./cmps/move-list";
 
 .main-app {
     min-height: 100vh;
