--- a/src/assets/scss/views/_home.scss
+++ b/src/assets/scss/views/_home.scss
@@ -11,8 +11,8 @@
     align-items: center;
 
     .main-header {
-        padding-top: 2px;
-        padding-bottom: 18px;
+        background-color: $secondary-bgc;
+        padding-top: 6px;
         align-items: center;
         h1 {
             font-size: 24px;
