--- a/src/assets/scss/cmps/_contact-list.scss
+++ b/src/assets/scss/cmps/_contact-list.scss
@@ -1,10 +1,13 @@
 .contact-list {
-    display: flex;
-    gap: 10px;
+    display: grid;
     padding: 10px 30px;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     height: calc(100vh - 130px);
     overflow-y: auto;
-    justify-content: space-between;
-
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-rows: $contact-desktop-height;
+    gap: 10px;
+    a {
+        height: $contact-desktop-height;
+    }
 }
