--- a/src/assets/scss/cmps/_contact-preview.scss
+++ b/src/assets/scss/cmps/_contact-preview.scss
@@ -4,8 +4,8 @@
     // justify-content: space-evenly;
     border: 1px solid gray;
     border-radius: 10px;
-    width: $contact-desktop-width;
-    height: $contact-desktop-height;
+    // width: $contact-desktop-width;
+    height: 100%;
     gap: 10px;
     padding: 5px;
     background-color: $secondary-bgc;
@@ -13,10 +13,18 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     .img-container {
         display: flex;
+        // align-items: center;
         flex-basis: 30%;
-        img {
-            height: 100%;
-            width: 100%;
+        .initials {
+            background-color: $primary-bgc;
+            height: 45px;
+            width: 45px;
+            outline: 1px solid white;
+            border-radius: 4em;
+            text-transform: capitalize;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
     .contact-details{
