--- a/src/assets/scss/views/_contact-details.scss
+++ b/src/assets/scss/views/_contact-details.scss
@@ -8,8 +8,8 @@
         background-color: $header-bgc;
         min-height: $headerHeight;
         align-items: center;
+        border-bottom: 1px solid gray;
         a {
-            // background-color: $primary-bgc;
             border: unset;
             padding: 10px 0;
             color: $primary-clr;
@@ -21,14 +21,23 @@
         background-color: $secondary-bgc;
         width: 100%;
         align-items: center;
-        min-height: 70%;
+        min-height: 60%;
         justify-content: space-evenly;
         .details-container {
             align-items: center;
             justify-content: space-between;
-            img {
+            .initials {
+                background-color: $primary-bgc;
                 height: 120px;
                 width: 120px;
+                outline: 1px solid white;
+                border-radius: 4em;
+                text-transform: capitalize;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: rem(30px);
+                margin-bottom: 10px;
             }
             .details {
                 gap: 10px;
@@ -51,6 +60,8 @@
                 border: none;
                 -webkit-appearance: none;
                 margin: 0;
+                color: $primary-clr;
+                padding-left: 5px; 
             }
             .transfer {
                 background-color: $clr6;
@@ -60,29 +71,5 @@
             }
         }
     }
-    .move-history {
-        overflow-y: auto;
-        gap: 10px;
-        .title {
-            font-size: rem(20px);
-        }
-        .move {
-            .amount {
-                gap: 5px;
-                .bit {
-                    color: $clr-bit;
-                }
-                .usd{
-                    color: $clr-usd;
-                }
-                margin-bottom: 3px;
-            }
-            .status {
-                .type {
-                    color: rgb(51, 51, 251);
-                }
-            }
-        }
-        
-    }
+    
 }
